banner: fix text centering on mobile

--- a/frontend/src/styles/blocks/banner.scss
+++ b/frontend/src/styles/blocks/banner.scss
@@ -70,13 +70,20 @@ $hb-banner-breakpoint: 30em;
 	}
 
 
-	&__text {
+	&__textContainer {
 		position: absolute;
 		inset-inline-start: 0;
 		inset-block-start: 0;
+
+		@include hb-banner-vertical-until() {
+			inline-size: 100%;
+		}
+	}
+	&__text {
 		padding: calc(var(--hb-vr-base) * 1);
 		color: var(--hb-colors-default-background);
 		max-inline-size: 19rem;
+		margin-inline: auto;
 
 		@include hb-banner-vertical-until() {
 			text-align: center;
